# aoc

./: .gitignore  input.sh
2021/: 3-2.js  4-1.js
2023/js/: day09.js  day10.js  day11.js
2023/rust/: Cargo.toml  out.txt
2023/rust/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  lib.rs  main.rs
2023/rust/src/lib/: mod.rs  util.rs
2023/rust/tests/: day01.rs
2024/bash/: day1.sh
2024/js/: day_2.js  day_4_gold.js  day_4_silver.js
2024/rust/src/: main.rs
2024/rust/src/solutions/: day10.rs
2024/zig/: build.zig
2024/zig/src/: main.zig  root.zig
2024/zig/src/solutions/: day_1.zig  day_11.zig
