[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-iterator = "2.1.0"
fancy-regex = "0.13.0"
indicatif = "0.17.8"
itertools = "0.13.0"
num = "0.4.3"
regex = "1.10.6"
